objects/Community_EndPoint__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ByPassPortalSite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bypass  going through Partner Portal Site for logging into Communities</description>
        <label>ByPassPortalSite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Encryption__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use Encryption for Username and Password if true</description>
        <label>Use Encryption</label>
        <type>Checkbox</type>
    </fields>
    <label>Community EndPoint</label>
</CustomObject>